<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">VSCoddio</string>
    <string name="about_app">About App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="hide">Hide</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="move_app_data">Move App Data</string>
    <string name="move_app_data_info">The app has been transferred to a different storage location. The data will be moved now.</string>
    <string name="loading">Loading</string>
    <string name="reload">Reload</string>
    <string name="stop_loading">Stop Loading</string>
    <string name="backwards">Backwards</string>
    <string name="forward">Forward</string>
    <string name="open">Open</string>
    <string name="open_externally">Open Externally</string>
    <string name="copy_url">Copy URL</string>
    <string name="execute_javascript">Execute JavaScript</string>
</resources>