<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add"
        android:title="@string/add" />
    <item
        android:id="@+id/remove"
        android:title="@string/remove" />
    <item
        android:id="@+id/reload"
        android:title="@string/reload" />
    <item
        android:id="@+id/stop"
        android:title="@string/stop_loading" />
    <item
        android:id="@+id/exec_script"
        android:title="@string/execute_javascript" />
    <item
        android:id="@+id/hide"
        android:title="@string/hide" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
    <item
        android:id="@+id/about_app"
        android:title="@string/about_app" />
</menu>